Migrated to Java 11